--- a/flixx/index.html
+++ b/flixx/index.html
@@ -21,14 +21,14 @@
   <body>
     <header class="main-header">
       <div class="container">
-        <div class="logo"><a href="./index.html">FLIXX</a></div>
+        <div class="logo"><a href="/flixx/index.html">FLIXX</a></div>
         <nav>
           <ul>
             <li>
-              <a class="nav-link" href="./index.html">Movies</a>
+              <a class="nav-link" href="/flixx/index.html">Movies</a>
             </li>
             <li>
-              <a class="nav-link" href="./shows.html">TV Shows</a>
+              <a class="nav-link" href="/flixx/shows.html">TV Shows</a>
             </li>
           </ul>
         </nav>
