fixing all the nav-links on the all pages

--- a/flixx/shows.html
+++ b/flixx/shows.html
@@ -19,7 +19,7 @@
   <body>
     <header class="main-header">
       <div class="container">
-        <div class="logo"><a href="/flixx/">FLIXX</a></div>
+        <div class="logo"><a href="/flixx/index.html">FLIXX</a></div>
         <nav>
           <ul>
             <li>
